# flin-meta-ads-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-20-flin-meta-ads-mcp-design.md  2026-03-20-flin-meta-ads-mcp-implementation.md
src/flin_meta_ads_mcp/: __init__.py  config.py  dispatcher.py  errors.py  guards.py  meta_client.py  response.py  server.py  tool_registry.py
src/flin_meta_ads_mcp/tools/: accounts.py  ads.py  adsets.py  campaigns.py  common.py  creatives.py  images.py  insights.py  previews.py
tests/: test_config.py  test_guards.py  test_meta_client.py  test_response.py  test_server.py  test_server_import.py  test_tool_registry.py  test_tools.py
